--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_PROJECT_ID=5886da2a72e5f0bad8cd10a675bb07e4
-NOTIFY_API_SECRET=ce52f9d2-9d9a-434c-aa6d-c142ae1d59a6
+NEXT_PUBLIC_PROJECT_ID=
+NOTIFY_API_SECRET=
 NEXT_PUBLIC_APP_DOMAIN=engage-demo-seven.vercel.app
