--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_PROJECT_ID=
-NOTIFY_API_SECRET=
+NEXT_PUBLIC_PROJECT_ID=5886da2a72e5f0bad8cd10a675bb07e4
+NOTIFY_API_SECRET=24d08018-5737-493c-8c64-237312f6a6ac
 NEXT_PUBLIC_APP_DOMAIN=engage-demo-seven.vercel.app
