--- a/public/.well-known/wc-notify-config.json
+++ b/public/.well-known/wc-notify-config.json
@@ -18,9 +18,9 @@
       "description": "Get notified when urgent action is required from your account"
     }
   ],
-  "name": "gm-hackers",
+  "name": "engage-demo",
   "icons": [
     "https://docs.walletconnect.com/assets/images/web3inboxLogo-b05bb667494386860888488e89856cd9.png"
   ],
-  "description": "Get started in minutes with WalletConnect Notify."
+  "description": "A Notify API application."
 }
